 * Added parsing of arbitrary columns of the LAMMPS dump parser. (Issue #3504)
 * Documented the r0 attribute in the `Contacts` class and added the 
   `n_initial_contacts` attribute, with documentation. (Issue #2604, PR #4415)
 * Implement average structures with iterative algorithm from 
   DOI 10.1021/acs.jpcb.7b11988. (Issue #2039, PR #4524)

Changes
 * As per SPEC0 the minimum supported Python version has been raised
   to 3.10 (PR #4502)
 * MDAnalysis.analysis.hole2 is now directly imported from the mdakit
   mdahole2. This module is deprecated and will be fully removed in
   MDAnalysis version 3.0 (PR #4464)
 * Testsuite packaging now uses a pyproject.toml file (PR #4463)
 * Improvement of setuptools packaging, including deduplication of
   dependency lists (PR #4424)
 * As per NEP29, the minimum version of numpy has been raised to 1.23.
   We have opted to pin to 1.23.2 to ensure the same minimum numpy version
   is used from python 3.9 to 3.11 (Issue #4401, PR #4402)
 * updated tests that used assert_almost_equal(..., decimal={N}) with 
   equivalent assert_allclose(...  rtol=0, atol=1.5e-{N}) (issue modernize
   testing code #3743, PR Replaced numpy.testing.assert_almost_equal to 
   numpy.testing.assert_allclose #4438)

Deprecations
 * The MDAnalysis.analysis.waterdynamics module has been deprecated in favour
   of the waterdynamics MDAKit and will be removed in version 3.0.0 (PR #4404)
 * The MDAnalysis.analysis.psa module has been deprecated in favour of
   the PathSimAnalysis MDAKit and will be removed in version 3.0.0
   (PR #4403)


12/26/23 IAlibay, ianmkenney, PicoCentauri, pgbarletta, p-j-smith, 
         richardjgowers, lilyminium, ALescoulie, hmacdope, HeetVekariya, 
         JoStoe, jennaswa, ljwoods2

 * 2.7.0

Fixes
  * Fix doctest errors of lib/transformations.py (Issue #3925, PR #4370)
  * Fix documentation building errors due to `html_static_path` and unindented
    block of code (Issue #4362, PR #4365)